# MemoPlan

./: .gitignore  MemoPlan产品设计文档.md  README.md  Uninstall MemoPlan.lnk  build-exe.bat  electron-main.cjs  electron-preload.cjs  index.html  package-electron.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts  快速开始.md
.github/workflows/: build.yml
.trae/documents/: 功能增强计划.md
scripts/: generate-icon.cjs  generate-icon.js
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  main.rs
src/components/: AIAssistant.tsx  BacklinkPanel.tsx  CollapsiblePanel.tsx  ConfirmDialog.tsx  Editor.tsx  Header.tsx  ImportDialog.tsx  NoteGraph.tsx  NoteList.tsx  Preview.tsx  ResizableLayout.tsx  RichTextEditor.tsx  Sidebar.tsx  SmartImportDialog.tsx  StatusBar.tsx  SyncSettings.tsx  TagManager.tsx  TaskPanel.tsx  Toast.tsx  WorkbenchLayout.tsx
src/hooks/: useKeyboardShortcuts.ts
src/locales/: en.json  zh-CN.json  zh-TW.json
src/pages/: SearchPage.tsx  SettingsPage.tsx  TrashPage.tsx
src/services/: aiService.ts  contentProcessor.ts  dbService.ts  linkService.ts  markdownParser.ts  syncService.ts
src/stores/: layoutStore.ts  noteStore.ts  settingsStore.ts  taskStore.ts
src/types/: index.ts
